attempt to fix block quote on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -125,6 +125,9 @@
         border-radius: 50px;
         color: @color-swatch7;
         background-color: @color-swatch3;
+        @media @mobile {
+            left: -45px;
+        }
     }
 }
 
